fixed navbar alignment

--- a/public/app.css
+++ b/public/app.css
@@ -18,6 +18,16 @@ a {
   overflow: clip;
 } */
 
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
 li {
   list-style: none;
 }
@@ -71,13 +81,17 @@ li {
   letter-spacing: 1px;
 }
 
+.header_main {
+
+}
+
 .header_links {
   display: flex;
+  align-items: center;
 }
 
 .header_link {
   padding: 2.2rem 3rem;
-  /* display: inline-block; */
   font-size: 1rem;
   color: #333;
   text-transform: uppercase;
